deploy/gitops/gitops/apps/invest-buddy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: invest
  labels:
    app.kubernetes.io/name: invest-buddy
